[tool.poetry]
name = "fastapi-slowly"
version = "0.5.0"
description = "Code-along for creating data apps with FastAPI and friends."
authors = ["liquidcarbon <akscrps@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
gunicorn = "^21.2.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
